realiza as alteracoes

--- a/conversor.html
+++ b/conversor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    
     <title>Conversor de Moeda</title>
     <style>
        
@@ -35,7 +36,7 @@
     <div class="result" id="result"></div>
 </div>
 
-
+<link rel="stylesheet" href="main.js">
 
 </body>
 </html>
