realiza as alteracoes

--- a/conversor.html
+++ b/conversor.html
@@ -18,6 +18,7 @@
     <input type="number" id="amount" placeholder="Valor" />
 
     <select id="fromCurrency">
+        <label for="daMoeda">de</label>
         <option value="BRL">Real Brasileiro (BRL)</option>
         <option value="USD">Dólar Americano (USD)</option>
         <option value="EUR">Euro (EUR)</option>
@@ -25,6 +26,7 @@
     </select>
 
     <select id="toCurrency">
+        <label for="daMoeda">Pra</label>
         <option value="USD">Dólar Americano (USD)</option>
         <option value="BRL">Real Brasileiro (BRL)</option>
         <option value="EUR">Euro (EUR)</option>
