realiza as alteracoes

--- a/conversor.html
+++ b/conversor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="form">
-        <h1 style=>Conversor De Moedas</h1>
+        <h1 style=>Convertidor de moneda</h1>
         <div id="input-box">
             <form id="currency-form">
                 <div id="texts">
@@ -34,10 +34,10 @@
                 </div>
                 <h2 id="Resultado"></h2>
                 <div id="button-continue">
-                    <button type="submit">Converter</button>
+                    <button type="submit">Convertir</button>
                 </div>
                 <div id="limpar">
-                    <button type="button" onclick="document.getElementById('valor').value=''">Limpar</button>
+                    <button type="button" onclick="document.getElementById('valor').value=''">Limpiar</button>
                 </div>
                 <div id="conversao"></div>
             </form>
